<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E1D5C9"
        android:orientation="vertical"
        tools:context=".Feedback">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="FeedBack"
            android:textColor="@color/unselectedItems"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="410dp"
            android:layout_height="150dp"
            android:src="@drawable/p2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="420dp"
            android:layout_height="25dp"
            android:text="@string/text2"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/stars"
                android:layout_width="245dp"
                android:layout_height="52dp"
                android:contentDescription="feedback"
                android:numStars="5"
                android:progressBackgroundTint="@color/unselectedItems"
                android:progressTint="@color/selectedItems" />

        </LinearLayout>

        <TextView
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextMultiLine3"
            android:layout_width="352dp"
            android:layout_height="120dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="2dp"
            android:background="#B5B3B3"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/multiText"
            android:inputType="textMultiLine"
            android:lines="5"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/btn_sendFeedback"
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="250dp"
            android:background="@color/btnC"
            android:text="@string/button1"
            android:textColor="@color/white" />

    </LinearLayout>
</layout>

